# TermUI

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs
src/renderer/: mod.rs
src/screen/: mod.rs
